crates/tui/tests/snapshots/views__palette-everything-120x40.snap
---
source: crates/tui/tests/views.rs
expression: harness.screen()
---
home   account Acme (1)   list Weekly
lists               Manage subscriber lists
subscribers         Manage s┌ every operation ─────────────────────────────────────────────┐
broadcasts          Manage b│> list                                                        │
campaigns           Manage a│lists list                                                    │
workflows           Manage a│lists get                                                     │
account             Manage y│lists find                                                    │
custom-fields       Manage c│subscribers list                                              │
tags                Manage t│broadcasts list                                               │
segments            Manage s│campaigns list                                                │
integrations        Manage i│workflows list                                                │
landing-pages       Manage l│account list                                                  │
purchases           Record p│custom-fields list                                            │
webforms            Manage w│tags list                                                     │
webform-split-tests Manage w│segments list                                                 │
                            │integrations list                                             │
                            │landing-pages list                                            │
                            │webforms list                                                 │
                            │webform-split-tests list                                      │
                            │account webform-split-tests                                   │
                            │webform-split-tests get                                       │
                            │webform-split-tests components                                │
                            │webform-split-tests component                                 │
                            │landing-pages get                                             │
                            │workflows event-history                                       │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            └──────────────────────────────────────────────────────────────┘


q quit  Enter run  Esc close  Ctrl-p palette
