crates/tui/tests/snapshots/views__palette-for-selection-80x24.snap
---
source: crates/tui/tests/views.rs
expression: harness.screen()
---
home › subscribers list   account Acme (1)   list Weekly
Email                       Status                    Subscribed
ada@exam┌ operations for this selection ───────────────────────────────┐0+00:00
grace@ex│>                                                             │
        │subscribers list                                              │
        │subscribers get                                               │
        │subscribers create                                            │
        │subscribers update                                            │
        │subscribers update-by-email                                   │
        │subscribers delete                                            │
        │subscribers delete-by-email                                   │
        │subscribers unsubscribe                                       │
        │subscribers find                                              │
        │subscribers move                                              │
        │account find-subscribers                                      │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        │                                                              │
        └──────────────────────────────────────────────────────────────┘
loaded 2

q quit  Enter run  Esc close  Ctrl-p palette
