crates/tui/tests/snapshots/views__palette-watches-120x40.snap
---
source: crates/tui/tests/views.rs
expression: harness.screen()
---
home › subscribers list   account Acme (1)   list Weekly
Email                                   Status                                  Subscribed
ada@example.com             ┌ stop a watch ────────────────────────────────────────────────┐0:00:00+00:00
grace@example.com           │>                                                             │
                            │GET /1.0/accounts/1/lists/7/broadcasts/9                      │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            │                                                              │
                            └──────────────────────────────────────────────────────────────┘
loaded 2
⏳  GET /1.0/accounts/1/lists/7/broadcasts/9
q quit  Enter run  Esc close  Ctrl-p palette
