crates/tui/tests/snapshots/views__raw-request-80x24.snap
---
source: crates/tui/tests/views.rs
expression: harness.screen()
---
home › raw request   account Acme (1)   list Weekly
  method  GET
  path    /1.0/accounts/1/lists/7
  body

200
{
  "id": 7,
  "name": "Weekly"
}













q quit  Enter send  Tab next field  Esc back  Ctrl-p palette
